--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <img class="logo" src="assets/logo.png" alt="Gerador de senhas logo"/>
 
 <main class="container-input">
-<span>Tamanho <span id="valor"></span> caractereres
+<span>Tamanho <span id="valor"></span> caracteres
 </span>
 
 <input id="slider"  class="slider" type="range" min="5" max="25" value="15">
